<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   android:orientation="vertical">

    <EditText
            android:id="@+id/organization_name_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_organization_name"
            android:textSize="@dimen/size_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:inputType="text"
            android:autofillHints="false"/>

    <ImageButton
            android:id="@+id/add_witness_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@drawable/ic_baseline_add_24"
            android:visibility="visible"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/organization_name_edit_text"/>

    <ListView
            android:id="@+id/witness_edit_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/organization_name_edit_text"
            android:textSize="@dimen/size_body"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/organization_name_edit_text"/>

    <Button
            android:id="@+id/properties_edit_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_confirm"
            app:layout_constraintRight_toLeftOf="@id/properties_edit_cancel"
            app:layout_constraintTop_toBottomOf="@id/witness_edit_list"/>


    <Button
            android:id="@+id/properties_edit_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/witness_edit_list"/>

</androidx.constraintlayout.widget.ConstraintLayout>