<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/fragment_organizer"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
  <!-- TODO: DELETE
  <androidx.constraintlayout.widget.Guideline
          android:id="@+id/guideline_horizontal_tab"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="horizontal"
          app:layout_constraintGuide_percent="@dimen/guideline_horizontal_tab"/>


  <LinearLayout
          android:id="@+id/organizer_linear_layout"
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:orientation="vertical"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/guideline_horizontal_tab">

      <ImageButton
              android:id="@+id/edit_button"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="end"
              android:src="@drawable/ic_baseline_edit_24"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintTop_toTopOf="parent"/>

      <ViewSwitcher
              android:id="@+id/viewSwitcher"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginVertical="@dimen/margin_top"
              android:visibility="gone">

          <include
                  android:id="@+id/properties_view"
                  layout="@layout/layout_properties"/>

          <include
                  android:id="@+id/properties_edit_view"
                  layout="@layout/layout_properties_edit"/>
      </ViewSwitcher>

      <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/swipe_refresh">

          <ExpandableListView
                  android:id="@+id/organizer_expandable_list_view"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layoutDirection="ltr"/>
      </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

  </LinearLayout>
  -->
</androidx.constraintlayout.widget.ConstraintLayout>